Added Spherical calculation functionality